Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -13,54 +13,68 @@ ALINA (Algorithmic Learning and Integrated Network Analytics) is revolutionizing
   While blockchain technology aims to distribute power, crucial market-moving information often resides in centralised, closed channels. Despite on-chain transparency & access to information users fail to take action since everything is bombarded with noise. ALINA helps you declutter and find the needle in the haystack.
 </Card>
 
-## Our Solution
+## Core Architecture
 
 <CardGroup cols={2}>
-  <Card title="Information Bridge" icon="bridge">
-    Connect fragmented data across closed and open internet, social channels, and on-chain activities - now accessible through simple chatGPT like panel.
+  <Card title="Advanced LLM" icon="robot">
+    ALINA's custom-built Intelligence LLM Model simulates market scenarios and predicts outcomes like military war-room simulations, detecting patterns before they emerge.
   </Card>
 
-  <Card title="Advanced LLM" icon="robot">
-    ALINA is not just limited as an AI Agent, the full system will contain of a custom built Intelligence LLM Model which can detect patterns and recommend course of actions, just like war simulations.
+  <Card title="Data Processing" icon="microchip">
+    Real-time processing of 10,000 signals per minute across blockchain data, global events, and social interactions, enabling comprehensive market understanding.
   </Card>
 </CardGroup>
 
-<Card title="Infrastructure Overview" icon="circle-info">
-  At this point of time ALINA can ingest and process upto 10,000 signals per minute from any possible data source, both onchain and offchain, this isnt limited by social chatter it could also process government policy changes and world macro economic activities.
-</Card>
-
-## Key Modules
+## Intelligence Sources
 
 <CardGroup cols={3}>
-  <Card title="Market Intelligence" icon="chart-mixed">
-    AI-identified trends and market movements with real-time analysis.
+  <Card title="Blockchain Data" icon="link">
+    Direct monitoring of on-chain activities, transactions, and smart contract interactions across multiple networks.
   </Card>
 
-  <Card title="Sentiment Analysis" icon="heart-pulse">
-    Monitor market mood across multiple platforms and sources.
+  <Card title="Social Signals" icon="users">
+    Analysis of community dynamics, team movements, and project interactions within the crypto ecosystem.
   </Card>
 
-  <Card title="Alpha Discovery" icon="magnifying-glass-dollar">
-    Correlate social signals with on-chain activities to uncover opportunities.
+  <Card title="Global Events" icon="earth-americas">
+    Tracking of policy changes, economic shifts, and regulatory developments that impact crypto markets.
   </Card>
 </CardGroup>
 
-## Trading Innovation
+## Strategic Capabilities
 
 <CardGroup cols={2}>
-  <Card title="Cross-chain Trading" icon="link">
-    Coming Soon: Seamless trading across multiple blockchain networks.
+  <Card title="Pattern Recognition" icon="brain">
+    Correlate seemingly unrelated events across different data sources to identify emerging opportunities before they become obvious.
   </Card>
 
-  <Card title="Gasless Trading" icon="gas-pump">
-    Coming Soon: Trade with reduced or eliminated gas fees.
+  <Card title="Risk Analysis" icon="shield">
+    Evaluate market conditions, team credibility, and external factors to assess potential risks and rewards.
+  </Card>
+</CardGroup>
+
+## Future Rollout
+
+Future Rollout
+
+<CardGroup cols={3}>
+  <Card title="Phase 1 - Chat Intelligence" icon="comments">
+    Access ALINA's processed data and insights through an intuitive chat interface, enabling natural language queries across our comprehensive intelligence database.
+  </Card>
+
+  <Card title="Phase 2 - Intelligence Suite" icon="brain-circuit">
+    Full access to ALINA's pattern recognition and market simulation capabilities, with real-time processing of market movements and social signals.
+  </Card>
+
+  <Card title="Phase 3 - Trading Operations" icon="rocket">
+    Autonomous trading capabilities with cross-chain execution and gas optimization, powered by ALINA's comprehensive market intelligence.
   </Card>
 </CardGroup>
 
 ## Experience The Future
 
-Ready to revolutionise your crypto trading experience?
+Ready to revolutionise your crypto trading experience with comprehensive market intelligence?
 
 <Card title="Join Our Waitlist" icon="rocket" href="https://ALINAintel.ai">
-  Be among the first to access ALINAintel's revolutionary features.
+  Be among the first to access ALINAintel's revolutionary trading intelligence platform.
 </Card>
