Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to ALINAintel"
-description: "The Intelligence Layer Between Onchain & Offchain"
+description: "The Intelligence Layer Between Onchain & Offchain."
 ---
 
 ## Mother of All Agents
